nat.tf
resource "google_compute_router" "router" {
  name    = "project-six-seven-router"
  region  = google_compute_subnetwork.main.region
  network = google_compute_network.main.id
}

resource "google_compute_router_nat" "nat" {
  name                               = "project-six-seven-nat"
  router                             = google_compute_router.router.name
  region                             = google_compute_router.router.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
}
